--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -13,21 +14,193 @@
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
+    --third-glow: conic-gradient(from 40deg at 50% 50%,
+        #ff8b7e 10deg,
+        #efe9ea 60deg,
+        transparent 360deg);
+    --secondary-glow: conic-gradient(from 30deg at 50% 50%,
+        #edcc53 10deg,
+        #efe9ea 60deg,
+        transparent 360deg);
   }
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  font-family: 'Nunito';
+}
+
+body::before {
+  background: var(--third-glow);
+  border-radius: 50%;
+  width: 50vw;
+  height: 50vw;
+  margin-left: -200px;
+  filter: blur(90px);
+  top: calc(50vh - 50vw/2);
+  right: calc(80vw);
+  background-repeat: repeat;
+}
+
+body::after {
+  background: var(--secondary-glow);
+  border-radius: 50%;
+  width: 500px;
+  height: 700px;
+  filter: blur(90px);
+  top: calc(20vh - 50vw/2);
+  right: calc(30vw - 50vw/2);
+  background-repeat: repeat;
+}
+
+body::before,
+body::after {
+  content: '';
+  position: fixed;
+  z-index: -1;
+  opacity: 0.8
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+}
+
+.navbar-items {
+  display: flex;
+  justify-content: space-between;
+  margin-right: 300px;
+  margin: 20px;
+}
+
+.sign-up {
+  @apply bg-purple-700 text-white rounded-full text-sm p-2;
+}
+
+.explore {
+  @apply bg-white text-pink-400 rounded-full text-sm p-2;
+}
+
+.main-page-headline {
+  width: min-content;
+  margin-left: calc(40vh);
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  margin-top: 80px;
+}
+
+.watch-demo {
+  @apply bg-white text-black border-gray-600 rounded-full text-sm p-2;
+}
+
+.animatedImage {
+  opacity: 1;
+  transition: opacity 0.5s ease;
+}
+
+.visible {
+  opacity: 1;
+}
+
+.card-carousel {
+  position: relative;
+  width: 100%;
+  max-width: 800px;
+  margin: 0 auto;
+  overflow: hidden;
+}
+
+.card-grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  margin-right: 90px;
+}
+
+/* Individual Card */
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  background-color: #fcf6e5;
+  border-radius: 8px;
+  transition: transform 0.3s ease;
+}
+
+.image-stack {
+  position: relative;
+  width: 100%;
+}
+
+.card:hover {
+  transform: scale(1.05);
+  background-image: url('/card-bg.jpg');
+  background-size: cover;
+}
+
+.card img {
+  object-fit: cover;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+}
+
+.card h2 {
+  margin-top: 10px;
+  font-size: 18px;
+  color: #333;
+}
+
+.card p {
+  margin-top: 5px;
+  font-size: 14px;
+  color: #666;
+}
+
+/* Controls */
+.controls {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.controls button {
+  padding: 8px 16px;
+  background-color: #e8a19a;
+  color: #fff;
+  border: #f8f9fa;
+  border-radius: 40px;
+  cursor: pointer;
+  margin: 0 10px;
+}
+
+.controls button:hover {
+  background-color: #ea6928;
+}
+
+.subscribe-box {
+  width: 75%;
+  padding: 5%;
+  margin: 10px;
+  height: 50%;
+  background-color: #f8f9f1;
+}
+
+@media screen and (max-width: 320px) {
+  .card-carousel {
+    width: 450%;
+    padding: 0;
+    height: 130%;
+    overflow: hidden;
+  }
+
+  .subscribe-box {
+    width: 500px;
+    padding: 5%;
+    margin-top: 150px;
+    margin-left: 60px;
+    height: 500px;
+    background-color: #f8f9f1;
   }
 }
